@@ -1,3 +1,9 @@
+2007-11-12  David Gilbert  <david.gilbert@object-refinery.com>
+
+	Patch 1827829 from Richard West:
+	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
+	(drawItemLabel): Fixed NPE.
+	
 2007-11-09  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* source/org/jfree/chart/renderer/xy/XYDotRenderer.java
